Updated setup document, no longer need to change web.xml. Fixed hired typo on the employee template

--- a/incAccounting/web/templates/Employee.html
+++ b/incAccounting/web/templates/Employee.html
@@ -18,7 +18,7 @@
 	<div class="field"><label>Job Title:</label><div>{Job Title}</div></div>
 	<div class="field"><label>Supervisor:</label><div>{Supervisor Contacts GUID}</div></div>
 	<div class="field"><label>Created:</label><div>{Contact Since}</div></div>
-	<div class="field"><label>Hirred:</label><div>{Date Hirred}</div></div>
+	<div class="field"><label>Hired:</label><div>{Date Hirred}</div></div>
 	<div class="field"><label>Terminated:</label><div>{Date Terminated}</div></div>
 	<div class="field"><label>Verified:</label><div>{Date Verified}</div></div>
 	<div class="field"><label>Insurance:</label><div>{Insurance}</div></div>
