Add number to payroll and payments so that it auto numbers correctly

--- a/incAccounting/web/templates/PayrollCheck.html
+++ b/incAccounting/web/templates/PayrollCheck.html
@@ -23,7 +23,7 @@
 	<div class="field"><label>Country:</label><div>{Country}</div></div>
 </div>
 
-<p>{Save} {Post} {Open Transaction} {Print}</p>
+<p>{Save} {Number Button} {Post} {Open Transaction} {Print}</p>
 
 <h2>Gross Compensation</h2>
 <!-- BEGIN Gross -->
