User edit screen loading data for existing users.
Moved away from java.sql.Date, java.sql.Time, and java.sql.Timestampe:
these are not JAX-WS compatible.

B

--- a/incAccounting/web/soap/css/incAccounting.css
+++ b/incAccounting/web/soap/css/incAccounting.css
@@ -65,3 +65,15 @@ h1 { margin-bottom: 0; }
 #divMenuOptions > h1:nth-child(1) {
 	margin-top: 0;
 }
+
+input { color: #888; }
+
+#tableList > tbody > tr > th {
+	color: #000;
+	font-weight: normal;
+	text-align: left;
+}
+
+#tableList > tbody > tr > td > a {
+	text-decoration: none;
+}
