Updated hardcoded address and fixed time logging bug

--- a/incAccounting/web/templates/DocumentPrint-SalesInvoice.html
+++ b/incAccounting/web/templates/DocumentPrint-SalesInvoice.html
@@ -2,8 +2,8 @@
 	<img id="logo" src="~/images/logo-black.svg">
 	<div id="ouraddress">
 		<p>
-			3880 Greenhouse Rd #421<br/>
-			Houston, Texas 77084
+			13831 Northwest Freeway STE #421<br/>
+			Houston, Texas 77040
 		</p>
 		<p>
 			(832) 606-3300
