--- a/incAccounting/web/templates/PaymentPrint-SalesPayment.html
+++ b/incAccounting/web/templates/PaymentPrint-SalesPayment.html
@@ -2,8 +2,8 @@
 	<div id="top">
 		<div id="our-address">
 			<img id="logo" src="~/images/logo-black.svg"><br/>
-			3880 Greenhouse Rd #421</br>
-			Houston, Texas 77080</br>
+			13831 Northwest Freeway STE #106<br/>
+			Houston, Texas 77040<br/>
 			(832) 606-3300
 		</div>
 		<div id="identifiers">
