--- a/incAccounting/web/templates/DepositPrint.html
+++ b/incAccounting/web/templates/DepositPrint.html
@@ -10,8 +10,8 @@
 	<div id="second">
 		<div id="address">
 			Internetwork Consulting LLC<br/>
-			3880 Greenhouse Rd #421<br/>
-			Houston, Texas 77084<br/>
+			13831 Northwest Freeway STE #106<br/>
+			Houston, Texas 77040<br/>
 			<br/>
 			<b>Account:</b> 1234567890
 		</div>
