--- a/incAccounting/web/templates/PaymentPrint-PurchasePayment.html
+++ b/incAccounting/web/templates/PaymentPrint-PurchasePayment.html
@@ -4,8 +4,8 @@
 			<div id="us">
 				<img id="logo" src="~/images/logo-black.svg" />
 				<div id="our-address">
-					3880 Greenhouse Rd #421</br>
-					Houston, Texas 77080</br>
+					13831 Northwest Freeway STE #106<br/>
+					Houston, Texas 77040<br/>
 					<br/>
 					(832) 606-3300
 				</div>
