--- a/incAccounting/web/templates/PostPayments.html
+++ b/incAccounting/web/templates/PostPayments.html
@@ -5,7 +5,7 @@
 	<div class="field"><label>Status:</label><div>{Filter Status}</div></div>
 </div>
 
-<p>{Invert} {Filter}</p>
+<p>{Filter} {Invert} {Process}</p>
 
 <!-- BEGIN Row -->
 <div class="block row">
