--- a/incAccounting/web/templates/PostPayrollChecks.html
+++ b/incAccounting/web/templates/PostPayrollChecks.html
@@ -4,7 +4,7 @@
 	<div class="field"><label>Status:</label><div>{Filter Status}</div></div>
 </div>
 
-<p>{Invert} {Filter}</p>
+<p>{Filter} {Invert} {Process}</p>
 
 <!-- BEGIN Row -->
 <div class="block row">
