Added ability to sort document lines by sort order

--- a/incAccounting/web/templates/Document.html
+++ b/incAccounting/web/templates/Document.html
@@ -47,8 +47,9 @@
 <!-- BEGIN Row -->
 <div class="block row">
 	<div class="field"><label>Delete:</label><div>{Row Is Deleted}</div></div>
-	<div class="field"><label>Taxable:</label><div>{Row Is Taxed}</div></div>
+	<div class="field"><label>Sort Order:</label><div>{Row Sort Order}</div></div>	
 	<div class="field"><label>Item:</label><div>{Row Items GUID}</div></div>
+	<div class="field"><label>Taxable:</label><div>{Row Is Taxed}</div></div>	
 	<div class="field"><label>Account:</label><div>{Row Accounts GUID}</div></div>	
 	<div class="field double"><label>Description:</label><div class="double">{Row Description}</div></div>	
 	<div class="field"><label>Quantity:</label><div>{Row Quantity}</div></div>
