Remove company field from login page.

--- a/incAccounting.Servlet/web/templates/Login.html
+++ b/incAccounting.Servlet/web/templates/Login.html
@@ -2,6 +2,6 @@
 <div class="block">
 	<div class="field"><label>User:</label><div>{Email Address}</div></div>
 	<div class="field"><label>Password:</label><div>{Password}</div></div>
-	<div class="field"><label>Company:</label><div>{Database}</div></div>
+	<!--<div class="field"><label>Company:</label><div>{Database}</div></div>-->
 </div>
 <p>{Login}</p>
